# The-Grand-House-of-Avneesh

./: helper.txt  pyproject.toml
src/the_grand_house_of_avneesh/summary/: __init__.py  text_summarizer.py  usage_example.py
src/the_grand_house_of_avneesh/summary/utils/config/: settings.py
src/the_grand_house_of_avneesh/summary/utils/llm/: bedrock_client.py  synthesis.py
src/the_grand_house_of_avneesh/summary/utils/metrics/: calculator.py
src/the_grand_house_of_avneesh/summary/utils/schema/: summary_schema_file.py
